amaroK ChangeLog
================
(C) 2002-2005 the amaroK authors.


VERSION 1.2.1:
  FIX: Directory column in the playlist was eating the first letter.
  ADD: New DCOP call "playlist: setStopAfterCurrent(bool)". (BR 99944)
  FIX: Coverfetcher: Do not crash when no cover was found. (BR 99942)
  ADD: Support for amazon.co.jp.
  CHG: Toolbar items reordered for optimal usability, as suggested by
       Aaron "Tom Green" Seigo.
  FIX: Show covers for albums containing chars '#' or '?'. (BR 96971 99780)
  ADD: Help file for the playlist2html script.
  ADD: New DCOP call "playlist: int getActiveIndex()".
  ADD: New DCOP call "playlist: playByIndex(int)".
  CHG: Upgraded internal SQLite database to 3.1.2.
  FIX: Update the database after editing tags in playlist. (BR 99593)
  ADD: New DCOP function "player: trackPlayCounter". (BR 99575)
  ADD: .ram playlist support with code from Kaffeine. (BR 96101)
  FIX: amaroK can now determine the correct track-length even for formats
       unknown to TagLib. Makes it possible to seek e.g. in m4a tracks.
  ADD: Can now pick from multiple Musicbrainz results. Patch from
       Jonathan Halcrow <gte899j@prism.gatech.edu>. (BR 89701)
  ADD: May now set a custom cover on multiple albums in the Cover-Manager.
  ADD: Support relative path of tracks in writing playlists. (BR 91053)
  FIX: Don't inline-edit tags for the whole playlist's selection.
  FIX: Fix "Recode Tags" crash issues. (BR 95041)
  ADD: "Set Custom Cover" can fetch remote images. (BR 90499)

VERSION 1.2:
  ADD: "Repeat Track" status is reflected by an icon in the playlist.
  ADD: New icons from tightcode for statusbar and repeatTrack.
  ADD: New Smart-Playlist "Ever Played".
  CHG: Bumped GStreamer version requirement to 0.8.4.
  CHG: Made it possible to use artsdsink with GStreamer again.
  CHG: Don't read m3u files recursively when dropping a folder on the
       playlist. No more doubled entries.
  FIX: Shoutcast radio with GStreamer is improved, no more dropouts when